logspout.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: logspout
spec:
  template:
    metadata:
      labels:
        name: logspout
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      serviceAccountName: logspout
      containers:
        - resources:
            requests:
              cpu: 0.15
          securityContext:
            privileged: true
          image: gliderlabs/logspout
          name: logspout
          volumeMounts:
            - name: log
              mountPath: /var/run/docker.sock
      volumes:
        - name: log
          hostPath:
              path: /var/run/docker.sock
